testsuite/poke.pkl/offset-type-diag-4.pk
/* { dg-do compile } */

fun foo = (offset<int,XXX> input, /* { dg-error "" } */
             int len) int:
{
    var ret = 0;
    return ret;
}
